refact: replace links by asset() and route() functions

--- a/public/martine-master/index.html
+++ b/public/martine-master/index.html
@@ -39,17 +39,17 @@
                     <div class="col-lg-6 col-sm-12 col-md-6">
                         <div class="sub_menu_right_content">
                             <span>Top destinations</span>
-                            <a href="#">Asia</a>
-                            <a href="#">Europe</a>
-                            <a href="#">America</a>
+                            <a href="{{ route('home') }}">Asia</a>
+                            <a href="{{ route('home') }}">Europe</a>
+                            <a href="{{ route('home') }}">America</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-sm-12 col-md-6">
                         <div class="sub_menu_social_icon">
-                            <a href="#"><i class="flaticon-facebook"></i></a>
-                            <a href="#"><i class="flaticon-twitter"></i></a>
-                            <a href="#"><i class="flaticon-skype"></i></a>
-                            <a href="#"><i class="flaticon-instagram"></i></a>
+                            <a href="{{ route('home') }}"><i class="flaticon-facebook"></i></a>
+                            <a href="{{ route('home') }}"><i class="flaticon-twitter"></i></a>
+                            <a href="{{ route('home') }}"><i class="flaticon-skype"></i></a>
+                            <a href="{{ route('home') }}"><i class="flaticon-instagram"></i></a>
                             <span><i class="flaticon-phone-call"></i>+880 356 257 142</a></span>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         <div class="banner_text_iner">
                             <h1> Saintmartine</h1>
                             <p>Let’s start your journey with us, your dream will come true</p>
-                            <a href="#" class="btn_1">Discover Now</a>
+                            <a href="{{ route('home') }}" class="btn_1">Discover Now</a>
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                                                 </select>
                                             </div>
                                             <div class="form_btn">
-                                                <a href="#" class="btn_1">search</a>
+                                                <a href="{{ route('home') }}" class="btn_1">search</a>
                                             </div>
                                         </div>
                                     </form>
@@ -217,7 +217,7 @@
                                                 </select>
                                             </div>
                                             <div class="form_btn">
-                                                <a href="#" class="btn_1">search</a>
+                                                <a href="{{ route('home') }}" class="btn_1">search</a>
                                             </div>
                                         </div>
                                     </form>
@@ -250,7 +250,7 @@
                                                 </select>
                                             </div>
                                             <div class="form_btn">
-                                                <a href="#" class="btn_1">search</a>
+                                                <a href="{{ route('home') }}" class="btn_1">search</a>
                                             </div>
                                         </div>
                                     </form>
@@ -281,15 +281,15 @@
                         <img src="img/single_place_1.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -304,15 +304,15 @@
                         <img src="img/single_place_2.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -327,15 +327,15 @@
                         <img src="img/single_place_3.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -350,15 +350,15 @@
                         <img src="img/single_place_4.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -368,7 +368,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn_1 text-cnter">Discover more</a>
+                <a href="{{ route('home') }}" class="btn_1 text-cnter">Discover more</a>
             </div>
         </div>
     </section>
@@ -384,18 +384,18 @@
                     <div class="single-footer-widget">
                         <h4>Discover Destination</h4>
                         <ul>
-                            <li><a href="#">Miami, USA</a></li>
-                            <li><a href="#">California, USA</a></li>
-                            <li><a href="#">London, UK</a></li>
-                            <li><a href="#">Saintmartine, Bangladesh</a></li>
-                            <li><a href="#">Mount Everast, India</a></li>
-                            <li><a href="#">Sidney, Australia</a></li>
-                            <li><a href="#">Miami, USA</a></li>
-                            <li><a href="#">California, USA</a></li>
-                            <li><a href="#">London, UK</a></li>
-                            <li><a href="#">Saintmartine, Bangladesh</a></li>
-                            <li><a href="#">Mount Everast, India</a></li>
-                            <li><a href="#">Sidney, Australia</a></li>
+                            <li><a href="{{ route('home') }}">Miami, USA</a></li>
+                            <li><a href="{{ route('home') }}">California, USA</a></li>
+                            <li><a href="{{ route('home') }}">London, UK</a></li>
+                            <li><a href="{{ route('home') }}">Saintmartine, Bangladesh</a></li>
+                            <li><a href="{{ route('home') }}">Mount Everast, India</a></li>
+                            <li><a href="{{ route('home') }}">Sidney, Australia</a></li>
+                            <li><a href="{{ route('home') }}">Miami, USA</a></li>
+                            <li><a href="{{ route('home') }}">California, USA</a></li>
+                            <li><a href="{{ route('home') }}">London, UK</a></li>
+                            <li><a href="{{ route('home') }}">Saintmartine, Bangladesh</a></li>
+                            <li><a href="{{ route('home') }}">Mount Everast, India</a></li>
+                            <li><a href="{{ route('home') }}">Sidney, Australia</a></li>
                         </ul>
 
                     </div>
@@ -430,10 +430,10 @@
                                 +880 362 352 783</p>
                         <span>contact@martine.com</span>
                         <div class="social-icons">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                            <a href="#"><i class="ti-instagram"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-facebook"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-twitter-alt"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-pinterest"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-instagram"></i></a>
                         </div>
                     </div>
                 </div>
