--- a/public/martine-master/about.html
+++ b/public/martine-master/about.html
@@ -39,17 +39,17 @@
                         <div class="col-lg-6 col-sm-12 col-md-6">
                             <div class="sub_menu_right_content">
                                 <span>Top destinations</span>
-                                <a href="#">Asia</a>
-                                <a href="#">Europe</a>
-                                <a href="#">America</a>
+                                <a href="{{ route('home') }}">Asia</a>
+                                <a href="{{ route('home') }}">Europe</a>
+                                <a href="{{ route('home') }}">America</a>
                             </div>
                         </div>
                         <div class="col-lg-6 col-sm-12 col-md-6">
                             <div class="sub_menu_social_icon">
-                                <a href="#"><i class="flaticon-facebook"></i></a>
-                                <a href="#"><i class="flaticon-twitter"></i></a>
-                                <a href="#"><i class="flaticon-skype"></i></a>
-                                <a href="#"><i class="flaticon-instagram"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-facebook"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-twitter"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-skype"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-instagram"></i></a>
                                 <span><i class="flaticon-phone-call"></i>+880 356 257 142</a></span>
                             </div>
                         </div>
@@ -167,18 +167,18 @@
                     <div class="single-footer-widget">
                         <h4>Discover Destination</h4>
                         <ul>
-                            <li><a href="#">Miami, USA</a></li>
-                            <li><a href="#">California, USA</a></li>
-                            <li><a href="#">London, UK</a></li>
-                            <li><a href="#">Saintmartine, Bangladesh</a></li>
-                            <li><a href="#">Mount Everast, India</a></li>
-                            <li><a href="#">Sidney, Australia</a></li>
-                            <li><a href="#">Miami, USA</a></li>
-                            <li><a href="#">California, USA</a></li>
-                            <li><a href="#">London, UK</a></li>
-                            <li><a href="#">Saintmartine, Bangladesh</a></li>
-                            <li><a href="#">Mount Everast, India</a></li>
-                            <li><a href="#">Sidney, Australia</a></li>
+                            <li><a href="{{ route('home') }}">Miami, USA</a></li>
+                            <li><a href="{{ route('home') }}">California, USA</a></li>
+                            <li><a href="{{ route('home') }}">London, UK</a></li>
+                            <li><a href="{{ route('home') }}">Saintmartine, Bangladesh</a></li>
+                            <li><a href="{{ route('home') }}">Mount Everast, India</a></li>
+                            <li><a href="{{ route('home') }}">Sidney, Australia</a></li>
+                            <li><a href="{{ route('home') }}">Miami, USA</a></li>
+                            <li><a href="{{ route('home') }}">California, USA</a></li>
+                            <li><a href="{{ route('home') }}">London, UK</a></li>
+                            <li><a href="{{ route('home') }}">Saintmartine, Bangladesh</a></li>
+                            <li><a href="{{ route('home') }}">Mount Everast, India</a></li>
+                            <li><a href="{{ route('home') }}">Sidney, Australia</a></li>
                         </ul>
 
                     </div>
@@ -213,10 +213,10 @@
                                 +880 362 352 783</p>
                         <span>contact@martine.com</span>
                         <div class="social-icons">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                            <a href="#"><i class="ti-instagram"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-facebook"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-twitter-alt"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-pinterest"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-instagram"></i></a>
                         </div>
                     </div>
                 </div>
