--- a/public/martine-master/top_place.html
+++ b/public/martine-master/top_place.html
@@ -39,17 +39,17 @@
                         <div class="col-lg-6 col-sm-12 col-md-6">
                             <div class="sub_menu_right_content">
                                 <span>Top destinations</span>
-                                <a href="#">Asia</a>
-                                <a href="#">Europe</a>
-                                <a href="#">America</a>
+                                <a href="{{ route('home') }}">Asia</a>
+                                <a href="{{ route('home') }}">Europe</a>
+                                <a href="{{ route('home') }}">America</a>
                             </div>
                         </div>
                         <div class="col-lg-6 col-sm-12 col-md-6">
                             <div class="sub_menu_social_icon">
-                                <a href="#"><i class="flaticon-facebook"></i></a>
-                                <a href="#"><i class="flaticon-twitter"></i></a>
-                                <a href="#"><i class="flaticon-skype"></i></a>
-                                <a href="#"><i class="flaticon-instagram"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-facebook"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-twitter"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-skype"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-instagram"></i></a>
                                 <span><i class="flaticon-phone-call"></i>+880 356 257 142</a></span>
                             </div>
                         </div>
@@ -151,15 +151,15 @@
                         <img src="img/single_place_1.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -174,15 +174,15 @@
                         <img src="img/single_place_2.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -197,15 +197,15 @@
                         <img src="img/single_place_3.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -220,15 +220,15 @@
                         <img src="img/single_place_4.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -243,15 +243,15 @@
                         <img src="img/single_place_1.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -266,15 +266,15 @@
                         <img src="img/single_place_2.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -289,15 +289,15 @@
                         <img src="img/single_place_3.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -312,15 +312,15 @@
                         <img src="img/single_place_4.png" alt="">
                         <div class="hover_Text d-flex align-items-end justify-content-between">
                             <div class="hover_text_iner">
-                                <a href="#" class="place_btn">travel</a>
+                                <a href="{{ route('home') }}" class="place_btn">travel</a>
                                 <h3>Saintmartine Iceland</h3>
                                 <p>Technaf, Bangladesh</p>
                                 <div class="place_review">
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
-                                    <a href="#"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                    <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                     <span>(210 review)</span>
                                 </div>
                             </div>
@@ -343,18 +343,18 @@
                     <div class="single-footer-widget">
                         <h4>Discover Destination</h4>
                         <ul>
-                            <li><a href="#">Miami, USA</a></li>
-                            <li><a href="#">California, USA</a></li>
-                            <li><a href="#">London, UK</a></li>
-                            <li><a href="#">Saintmartine, Bangladesh</a></li>
-                            <li><a href="#">Mount Everast, India</a></li>
-                            <li><a href="#">Sidney, Australia</a></li>
-                            <li><a href="#">Miami, USA</a></li>
-                            <li><a href="#">California, USA</a></li>
-                            <li><a href="#">London, UK</a></li>
-                            <li><a href="#">Saintmartine, Bangladesh</a></li>
-                            <li><a href="#">Mount Everast, India</a></li>
-                            <li><a href="#">Sidney, Australia</a></li>
+                            <li><a href="{{ route('home') }}">Miami, USA</a></li>
+                            <li><a href="{{ route('home') }}">California, USA</a></li>
+                            <li><a href="{{ route('home') }}">London, UK</a></li>
+                            <li><a href="{{ route('home') }}">Saintmartine, Bangladesh</a></li>
+                            <li><a href="{{ route('home') }}">Mount Everast, India</a></li>
+                            <li><a href="{{ route('home') }}">Sidney, Australia</a></li>
+                            <li><a href="{{ route('home') }}">Miami, USA</a></li>
+                            <li><a href="{{ route('home') }}">California, USA</a></li>
+                            <li><a href="{{ route('home') }}">London, UK</a></li>
+                            <li><a href="{{ route('home') }}">Saintmartine, Bangladesh</a></li>
+                            <li><a href="{{ route('home') }}">Mount Everast, India</a></li>
+                            <li><a href="{{ route('home') }}">Sidney, Australia</a></li>
                         </ul>
 
                     </div>
@@ -389,10 +389,10 @@
                                 +880 362 352 783</p>
                         <span>contact@martine.com</span>
                         <div class="social-icons">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                            <a href="#"><i class="ti-instagram"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-facebook"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-twitter-alt"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-pinterest"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-instagram"></i></a>
                         </div>
                     </div>
                 </div>
