--- a/public/martine-master/tour_details.html
+++ b/public/martine-master/tour_details.html
@@ -39,17 +39,17 @@
                         <div class="col-lg-6 col-sm-12 col-md-6">
                             <div class="sub_menu_right_content">
                                 <span>Top destinations</span>
-                                <a href="#">Asia</a>
-                                <a href="#">Europe</a>
-                                <a href="#">America</a>
+                                <a href="{{ route('home') }}">Asia</a>
+                                <a href="{{ route('home') }}">Europe</a>
+                                <a href="{{ route('home') }}">America</a>
                             </div>
                         </div>
                         <div class="col-lg-6 col-sm-12 col-md-6">
                             <div class="sub_menu_social_icon">
-                                <a href="#"><i class="flaticon-facebook"></i></a>
-                                <a href="#"><i class="flaticon-twitter"></i></a>
-                                <a href="#"><i class="flaticon-skype"></i></a>
-                                <a href="#"><i class="flaticon-instagram"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-facebook"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-twitter"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-skype"></i></a>
+                                <a href="{{ route('home') }}"><i class="flaticon-instagram"></i></a>
                                 <span><i class="flaticon-phone-call"></i>+880 356 257 142</a></span>
                             </div>
                         </div>
@@ -137,14 +137,14 @@
                                         <div class="rating">
                                             <span>Rating:</span>
                                             <div class="place_review">
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                             </div>
                                         </div>
-                                        <a href="#" class="btn_1">Plan Details</a>
+                                        <a href="{{ route('home') }}" class="btn_1">Plan Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -163,14 +163,14 @@
                                         <div class="rating">
                                             <span>Rating:</span>
                                             <div class="place_review">
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                             </div>
                                         </div>
-                                        <a href="#" class="btn_1">Plan Details</a>
+                                        <a href="{{ route('home') }}" class="btn_1">Plan Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -189,14 +189,14 @@
                                         <div class="rating">
                                             <span>Rating:</span>
                                             <div class="place_review">
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
-                                                <a href="#"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
+                                                <a href="{{ route('home') }}"><i class="fas fa-star"></i></a>
                                             </div>
                                         </div>
-                                        <a href="#" class="btn_1">Plan Details</a>
+                                        <a href="{{ route('home') }}" class="btn_1">Plan Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -219,7 +219,7 @@
                         Their</p>
                         <p>Waters make fish every without firmament saw had. Morning air subdue. Our Air very one. Whales grass is fish whales winged night yielding land creeping that seed appear were bearing.</p>
                         <div class="tour_details_content_btn">
-                            <a href="contact" class="btn_1">Book Ticket</a>
+                            <a href="{{ route('contact') }}"  class="btn_1">Book Ticket</a>
                         </div>
                     </div>
                 </div>
@@ -236,18 +236,18 @@
                     <div class="single-footer-widget">
                         <h4>Discover Destination</h4>
                         <ul>
-                            <li><a href="#">Miami, USA</a></li>
-                            <li><a href="#">California, USA</a></li>
-                            <li><a href="#">London, UK</a></li>
-                            <li><a href="#">Saintmartine, Bangladesh</a></li>
-                            <li><a href="#">Mount Everast, India</a></li>
-                            <li><a href="#">Sidney, Australia</a></li>
-                            <li><a href="#">Miami, USA</a></li>
-                            <li><a href="#">California, USA</a></li>
-                            <li><a href="#">London, UK</a></li>
-                            <li><a href="#">Saintmartine, Bangladesh</a></li>
-                            <li><a href="#">Mount Everast, India</a></li>
-                            <li><a href="#">Sidney, Australia</a></li>
+                            <li><a href="{{ route('home') }}">Miami, USA</a></li>
+                            <li><a href="{{ route('home') }}">California, USA</a></li>
+                            <li><a href="{{ route('home') }}">London, UK</a></li>
+                            <li><a href="{{ route('home') }}">Saintmartine, Bangladesh</a></li>
+                            <li><a href="{{ route('home') }}">Mount Everast, India</a></li>
+                            <li><a href="{{ route('home') }}">Sidney, Australia</a></li>
+                            <li><a href="{{ route('home') }}">Miami, USA</a></li>
+                            <li><a href="{{ route('home') }}">California, USA</a></li>
+                            <li><a href="{{ route('home') }}">London, UK</a></li>
+                            <li><a href="{{ route('home') }}">Saintmartine, Bangladesh</a></li>
+                            <li><a href="{{ route('home') }}">Mount Everast, India</a></li>
+                            <li><a href="{{ route('home') }}">Sidney, Australia</a></li>
                         </ul>
 
                     </div>
@@ -282,10 +282,10 @@
                                 +880 362 352 783</p>
                         <span>contact@martine.com</span>
                         <div class="social-icons">
-                            <a href="#"><i class="ti-facebook"></i></a>
-                            <a href="#"><i class="ti-twitter-alt"></i></a>
-                            <a href="#"><i class="ti-pinterest"></i></a>
-                            <a href="#"><i class="ti-instagram"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-facebook"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-twitter-alt"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-pinterest"></i></a>
+                            <a href="{{ route('home') }}"><i class="ti-instagram"></i></a>
                         </div>
                     </div>
                 </div>
